# OrangePi

./: .gitignore  pyproject.toml  test.py
Experiments/: correcting_labels.py  image_cutting.py  make_labels_for_semantic.py  mask_checking.py  matching.py  recolor_masks.py
Experiments/pl_modules/: =0.12.10  additional_losses.py  dataset.py  infer.py  model.py  train.py
notebooks/: Segformer training.ipynb  Training pipeline.ipynb
orangepi/: __init__.py  dataset_utils.py  imports.py  model_utils.py  pyproject.toml  segmentation.py  utils.py
