[project]
name = "orangepi"
version = "0.1.0"
description = ""
authors = [
    {name = "evgeniy", email = "marchuk.ep@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "segmentation-models-pytorch (>=0.4.0,<0.5.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torchmetrics (>=1.6.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mmcv-full (>=1.7.2,<2.0.0)",
    "mmsegmentation (==1.2.2)",
    "mmengine (>=0.10.7,<0.11.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "mmcv (>=2.2.0,<3.0.0)",
    "pytorch-lightning (>=2.5.0.post0,<3.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "optuna-integration[pytorch-lightning] (>=4.2.1,<5.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "ultralytics (>=8.3.92,<9.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)", 
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
black = "^25.1.0"
isort = "^6.0.1"
nbqa = "^1.9.1"
torchinfo = "^1.8.0"